--- a/web/modules/custom/telebot/telebot.routing.yml
+++ b/web/modules/custom/telebot/telebot.routing.yml
@@ -23,3 +23,10 @@ telebot.hook:
     _controller: '\Drupal\telebot\Controller\TelegramController::hook'
   requirements:
     _permission: 'access content'
+
+telebot.delete_hook:
+  path: '/telebot/deletehook'
+  defaults:
+    _controller: '\Drupal\telebot\Controller\TelegramController::deleteHook'
+  requirements:
+    _permission: 'access content'
