New theme and some fixes

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     "require": {
         "composer/installers": "^1.9",
         "drupal/admin_toolbar": "^3.1",
+        "drupal/adminimal_theme": "^1.6",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
+        "drupal/gin": "^3.0@beta",
         "drush/drush": "^10.2",
         "longman/telegram-bot": "^0.78.0"
     },
