--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,14 @@
         "composer/installers": "^1.9",
         "drupal/admin_toolbar": "^3.1",
         "drupal/adminimal_theme": "^1.6",
+        "drupal/autotitle": "^1.2",
+        "drupal/block_field": "^1.0@RC",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
+        "drupal/devel_entity_updates": "^3.0",
         "drupal/gin": "^3.0@beta",
+        "drupal/profile": "^1.4",
         "drush/drush": "^10.2",
         "longman/telegram-bot": "^0.78.0"
     },
