Continue make autorization and some entity referense filds

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -26,6 +26,7 @@ module:
   help: 0
   history: 0
   image: 0
+  jsonapi: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
@@ -36,7 +37,9 @@ module:
   path: 0
   path_alias: 0
   rdf: 0
+  rest: 0
   search: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
@@ -52,4 +55,5 @@ module:
 theme:
   olivero: 0
   claro: 0
+  gin: 0
 profile: standard
