--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,10 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_telegram_id
     - field.field.user.user.user_picture
-    - image.style.thumbnail
   module:
-    - image
     - user
 _core:
   default_config_hash: mZLyuWM9CQx2ZJVqFGSbzgFnHzudVbHBYmdU256A5Wk
@@ -15,18 +14,14 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
-  member_for:
-    weight: 5
-    region: content
-  user_picture:
-    type: image
-    label: hidden
+  field_telegram_id:
+    type: string
+    label: above
     settings:
-      image_style: thumbnail
-      image_link: content
-      image_loading:
-        attribute: lazy
+      link_to_entity: false
     third_party_settings: {  }
     weight: 0
     region: content
-hidden: {  }
+hidden:
+  member_for: true
+  user_picture: true
